--- a/css/style.css
+++ b/css/style.css
@@ -315,11 +315,15 @@ button:hover{
     color: #333;
     background-color: #fff;
     padding: 20px;
-    max-width: 1000px;
+    max-width: 900px;
     margin: auto;
 }
+.header span{
+    font-size: 1rem;
+    color: #a09a9a;
+}
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2 {
     font-weight: bold;
     margin-bottom: 1rem;
     color: #222;
@@ -358,16 +362,17 @@ a:hover {
 }
 
 ::selection {
-    background: #f1c40f;
-    color: #2c3e50;
+    background: #0000ff;
+    color: #fff;
 }
 
 blockquote {
     margin: 1em 0;
     padding-left: 1em;
-    border-left: 4px solid #ccc;
+    border-left: 4px solid #2980b9;
     color: #666;
     font-style: italic;
+    background: #ecf0f1;
   }
 
 blockquote p::before {
@@ -387,7 +392,6 @@ blockquote p::after {
 img {
     max-width: 100%;
     height: auto;
-    display: block;
     margin-bottom: 1rem;
   }
 
@@ -396,22 +400,53 @@ img {
     font-style: italic;
 }
 
-.comment {
-    background: #ecf0f1;
+.post-comment{
+    margin-top: 30px;
+    padding: 20px;
+    background-color: #e6edee;
+    border-radius: 10px;
+}
+.comment-header{
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+.comment-header img {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+    vertical-align: middle;
+}
+
+.comment-author{
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 1;
+}
+.comment-time{
+    font-size: 0.9rem;
+    color:#999;
+    line-height: 1;
+}
+
+.comment-text {
+    font-size: 0.95rem;
     padding: 10px;
     margin-bottom: 10px;
     transition: background 0.3s;
 }
   
-.comment:hover {
+.comment-text:hover {
     background: #bdc3c7;
 }
 
-.comment:nth-of-type(odd) {
+.comment-text:nth-of-type(odd) {
     border-left: 4px solid #3498db;
 }
   
-.comment:nth-of-type(even) {
+.comment-text:nth-of-type(even) {
     border-left: 4px solid #e74c3c;
 }
 
