--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ h1{
     text-decoration: none;
 }
 
-
 /* Menu */
 
 .nav{
@@ -67,7 +66,7 @@ h1{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%
+    height: 100%;
     padding: 0 20px;
     
     color: #fff;
